--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <h4>My favorite color is cyan.</h4>
                     <h4>My favorite food is pizza.</h4>
                     <h4>If I could be any animal, I would be bird.</h4>
+                    <h4>If I could travel anywhere, I would go to Iceland</h4>
             </div>
           </body>
         </html>
