--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <h4>My favorite food is pizza.</h4>
                     <h4>If I could be any animal, I would be bird.</h4>
                     <h4>If I could travel anywhere, I would go to Iceland</h4>
+                    <p>My favorite movie is Shrek 2</p>
             </div>
           </body>
         </html>
